<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/rollno"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:textAlignment="center"
        android:text="@string/col1"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textColor="@android:color/black"
        android:layout_weight="175"/>
    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:textAlignment="center"
        android:text="@string/name"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textColor="@android:color/black"
        android:layout_weight="175"
        />

    <TextView
        android:id="@+id/attendance"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="175"
        android:gravity="center"
        android:text="@string/attendance"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textStyle="italic" />
    </LinearLayout>

</LinearLayout>