<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/log_user"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/studying"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_below="@id/log_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/et_email"
        android:hint="@string/login_email"
        android:textColorHint="@android:color/white"
        android:drawableLeft="@drawable/ic_action_name"
        android:textColor="#ffffff"
        android:background="#11000000"
        android:layout_width="250dp"
        android:layout_height="36dp"
        android:layout_below="@id/log_user"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/et_pass"
        android:textColor="#ffffff"
        android:drawableLeft="@drawable/ic_password"
        android:layout_width="250dp"
        android:layout_height="36dp"
        android:background="#11111111"
        android:layout_alignLeft="@id/et_email"
        android:layout_alignStart="@id/et_email"
        android:layout_below="@id/et_email"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/login_pass"
        android:textColorHint="@android:color/white"
        />

    <EditText
        android:id="@+id/et_cpass"
        android:textColor="#ffffff"
        android:drawableLeft="@drawable/ic_password"
        android:layout_width="250dp"
        android:layout_height="36dp"
        android:background="#11111111"
        android:layout_alignLeft="@id/et_pass"
        android:layout_alignStart="@id/et_pass"
        android:layout_below="@id/et_pass"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="Confirm Password"
        android:textColorHint="@android:color/white"
        />

    <Button
        android:id="@+id/btn_SignUp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rectangle_pink"
        android:layout_below="@id/et_cpass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="SIGN UP"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_SignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_SignUp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:text="@string/login" />




</RelativeLayout>